# LVGLAndroid

./: .gitmodules  README.md  build.gradle.kts  jitpack.yml  settings.gradle.kts
demo/: build.gradle.kts
demo/src/androidTest/kotlin/com/wyq0918dev/lvgl/demo/: ExampleInstrumentedTest.kt
demo/src/main/: AndroidManifest.xml
demo/src/main/cpp/: CMakeLists.txt  DemoApi.cpp  DemoApp.cpp  DemoApp.hpp  logging.hpp  lv_conf.h  main.cpp
demo/src/main/java/com/wyq0918dev/lvgl/demo/: MainActivity.kt
demo/src/main/java/com/wyq0918dev/lvgl/demo/ui/theme/: Color.kt  Theme.kt
demo/src/main/kotlin/com/wyq0918dev/lvgl/demo/: MainActivity.kt
demo/src/main/kotlin/com/wyq0918dev/lvgl/demo/ui/theme/: Type.kt
demo/src/main/kotlin/com/wyq0918dev/lvgl/demo/ui/view/: LVGLDemoView.kt
demo/src/main/res/values/: strings.xml  themes.xml
demo/src/test/kotlin/com/wyq0918dev/lvgl/demo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lvgl/: build.gradle.kts
lvgl/src/androidTest/java/com/wyq0918dev/lvgl/: ExampleInstrumentedTest.kt
lvgl/src/main/cpp/: CMakeLists.txt  lv_conf.h
lvgl/src/test/java/com/wyq0918dev/lvgl/: ExampleUnitTest.kt
